# dse.ncodec

./: .gitignore  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependabot.yaml  super-linter.yml
doc/: Makefile
doc/content/apis/ncodec/: index.md
doc/content/apis/ncodec/examples/: ncodec_api.c
doc/content/docs/arch/netbus/: index.md
doc/content/docs/user/envars/ncodec/: index.md
doc/yed/: ncodec-simple-arch.graphml
dse/ncodec/: CMakeLists.txt  Makefile  codec.c  codec.h
dse/ncodec/codec/ab/: CMakeLists.txt  codec.c  codec.h  frame_fbs.c  pdu_fbs.c  vector.h
dse/ncodec/codec/ab/flexray/: engine.c  fbs.c  flexray.c  flexray.h  state.c
dse/ncodec/codec/ab/flexray_pop/: flexray_pop.c  flexray_pop.h
dse/ncodec/examples/: CMakeLists.txt
dse/ncodec/examples/ab-codec/: CMakeLists.txt  README.md  cosim.c  fray_config.c  fray_cosim.c  ncodec.c  pdu_cosim.c  simbus.c
dse/ncodec/examples/ab-codec-fmi/: CMakeLists.txt  fmu2.c  main.c  ncodec.c
dse/ncodec/examples/codec/: CMakeLists.txt  codec.c  dynamic.c  static.c
dse/ncodec/examples/flexray/: CMakeLists.txt  ncodec.c  wup.c
dse/ncodec/interface/: pdu.h
dse/ncodec/schema/abs/stream/: pdu_builder.h  pdu_reader.h  pdu_verifier.h
dse/ncodec/stream/: ascii85.c  buffer.c  stream.h
tests/cmocka/: CMakeLists.txt
tests/cmocka/codec/ab/: CMakeLists.txt  test_codec.c
tests/cmocka/codec/ab/frame/: CMakeLists.txt  test_can_fbs.c
tests/cmocka/codec/ab/pdu/: CMakeLists.txt  __test__.c  flexray_harness.c  flexray_harness.h  test_pdu.c  test_pdu_can.c  test_pdu_flexray.c  test_pdu_flexray__engine.c  test_pdu_flexray__multi_node.c  test_pdu_flexray__null_frame.c  test_pdu_flexray__single_node.c  test_pdu_flexray__startup.c  test_pdu_flexray__state.c  test_pdu_flexray_engine.c  test_pdu_ip.c  test_pdu_struct.c
tests/cmocka/codec/ab/pdu/flexray/pop/: test_flexray_pop.c
tests/e2e/: ab-codec.example.fray.txtar  ab-codec.example.pdu.txtar  ab-codec.example.txtar
